--- a/LoginSignup/index.html
+++ b/LoginSignup/index.html
@@ -3,24 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SendAnony | home</title>
-        <!-- link files and documents -->
+        <title>LogIn & SignUp</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <!-- <link rel="icon" href="/images/SendAnony.png">  -->
     </head>
 <body>
     <!-- The navbar -->
     <nav class="navbar navbar-light bg-light d-flex row justify-content-around overflow-hidden">
-        <section class="navbar-brand mb-0 h1">Chat Anonymous</section>
-        <div class="d-flex row headForms">
-            <form action="/">
-                <input type="submit" value="New Chat" class="btn btn-outline-success">
-            </form>
-            <form action="/">
-                <input type="submit" value="Log out" class="btn btn-danger">
-            </form>
-        </div>
+        <section class="navbar-brand mb-0 h1">Website name</section>
     </nav>
     <nav class="container content d-flex flex-column align-items-center p-3">
         <!-- where one of them appear -->
@@ -85,8 +75,7 @@
         </div>        
     </nav>
     <!-- scripts -->
-     <!-- scrtipts -->
-     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="script.js"></script>
 </body>
