Update on LoginSignup + something IDK regarding NavBar

--- a/LoginSignup/index.html
+++ b/LoginSignup/index.html
@@ -21,7 +21,7 @@
                     <form class="card bg-light shadow" action="/sign-up" method="post">
                         <div class="card-head">
                             <div class="btn-group btn-group-toggle w-100 justify-content-center" data-toggle="buttons">
-                                <label class="btn-outline-dark" id="login" onclick="toogleMood()">Log in</label>
+                                <label class="btn-dark" id="login" onclick="toogleMood()">Log in</label>
                                 <label class="btn-light" id="signup" onclick="toogleMood()">Sign up</label>
                             </div>
                         </div>
